--- a/src/static/thanks.html
+++ b/src/static/thanks.html
@@ -4,9 +4,10 @@
     <title>Draw a picture!</title>
     <style>
         html, body, div, h1 {
-            padding: 0;
+            padding: 1em;
             margin: 0;
             font-family: "Comic Sans MS", "Comic Sans", "sans-serif";
+            text-align: center;
         }
     </style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
